kustomization/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: "${SERVICE_NAME}"
spec:
  selector:
    app: "${SERVICE_NAME}"
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
  sessionAffinity: None
  type: ClusterIP
